# metaprof

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: gemm.cu
metaprof_nv/: api.py
metaprof_nv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
metaprof_nv/adapters/: binary_adapter.py
metaprof_nv/core/catalog/: metrics.py
metaprof_nv/core/parsers/: nsys_parser.py
metaprof_nv/storage/: artifact_store.py
warplens_nv/: api.py  cli.py
warplens_nv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
warplens_nv/adapters/: pytest_adapter.py  python_adapter.py
warplens_nv/core/: runner.py
warplens_nv/core/catalog/: metrics.py  recipes.py
warplens_nv/core/parsers/: ncu_parser.py
